--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
         <!-- facebook meta properties -->
         <meta property="og:title" content="BackTracker" />
-        <meta property="og:description" content="Get the travel information your need!" />
-        <meta property="og:image:secure_url" content="https://s3-eu-west-1.amazonaws.com/static.backtracker/logo-shadow.png" />
+        <meta property="og:site_name" content="BackTracker" />
+        <meta property="og:description" content="Get the travel information you need!" />
+        <meta property="og:image" content="http://s3-eu-west-1.amazonaws.com/static.backtracker/logo-shadow.png" />
+        <meta property="fb:app_id" content="412307002251243" />
 
         <!-- favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="resources/favicon.ico"/>
@@ -49,7 +51,7 @@
 
 
         <!-- Loader -->
-        <div class="loader" v-if="!loaded" v-cloak>
+        <div class="loader" v-cloak>
           <svg version="1.1" id="Layer_1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
           xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="210px" height="210px"
           viewBox="0 0 210 210" enable-background="new 0 0 210 210" xml:space="preserve">
