--- a/app/pages/gallery/main-tmpl.html
+++ b/app/pages/gallery/main-tmpl.html
@@ -1,6 +1,7 @@
 <div class="GalleryPage">
     <div class="gallery-head">
         <h1>Gallery</h1>
+        <h4 v-if="$loadingRouteData" class="loading">Loading...</h4>
     </div>
     <div class="gallery-content">
         <gallery-panel v-for="image in images" :item="image" :detail="show_detail"></gallery-panel>
