--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-gb">
     <head>
+        <script src="//cdn.optimizely.com/js/4661521729.js"></script>
+        <script src="//load.sumome.com/" data-sumo-site-id="2463e91b9b01e3c621748780e07ecbc874ef21774ec85cc34a6b32f697ffbb39" async="async"></script>
+
         <!-- title -->
         <title>Backtracker Blogs</title>
 
@@ -25,6 +28,9 @@
         <!-- favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="resources/favicon.ico"/>
 
+        <!-- Fonts -->
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
+
         <!-- Loading State CSS -->
         <link rel="stylesheet" type="text/css" href="loader.css" />
 
@@ -34,6 +40,16 @@
             [v-cloak].loader { display: block; }
         </style>
 
+
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-57355031-3', 'auto');
+          ga('send', 'pageview');
+        </script>
     </head>
     <body :class="{mobile: mobile_nav}">
         <nav-bar></nav-bar>
@@ -41,6 +57,7 @@
         <div class="content" :style="{height:height}">
             <router-view keep-alive></router-view>
         </div>
+        
         <div class="modal" v-if="modal" :style="{height:modal_height}" transition="fade">
             <a v-on:click="close_modal" class="close">
                 <img src="resources/cross.png"/>
@@ -101,11 +118,10 @@
           </svg>
         </div>
 
-        <script src="jspm_packages/system.js"></script>
+        <!-- <script src="jspm_packages/system.js"></script>
         <script src="config.js"></script>
         <script type="text/javascript">
-            System.trace = true;
             System.import("app/main");
-        </script>
+        </script> -->
     </body>
 </html>
