--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- site description -->
+        <!-- SEO -->
         <meta name="description" content="Backtrackers Blogging" />
         <meta name="keywords"    content="backpacking, backtracker, blogs, traveling" />
         <meta name="author"      content="Backtracker" />
@@ -40,6 +40,8 @@
             [v-cloak].loader { display: block; }
         </style>
 
+        <meta name="google-site-verification" content="pAgE4a49gVb-w2TUpaaKb0D861KOoFm8eRvLj89J1lI" />
+
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -57,7 +59,7 @@
         <div class="content" :style="{height:height}">
             <router-view keep-alive></router-view>
         </div>
-        
+
         <div class="modal" v-if="modal" :style="{height:modal_height}" transition="fade">
             <a v-on:click="close_modal" class="close">
                 <img src="resources/cross.png"/>
