--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta name="keywords"    content="backpacking, backtracker, blogs, traveling" />
         <meta name="author"      content="Backtracker" />
         <meta name="version"     content="1.0" />
-        <meta name="google-site-verification" content="pAgE4a49gVb-w2TUpaaKb0D861KOoFm8eRvLj89J1lI" />
+        <meta name=”fragment” content=”!”>
 
         <!-- facebook meta properties -->
         <meta property="og:title" content="BackTracker" />
@@ -118,10 +118,10 @@
           </svg>
         </div>
 
-        <!-- <script src="jspm_packages/system.js"></script>
+        <script src="jspm_packages/system.js"></script>
         <script src="config.js"></script>
         <script type="text/javascript">
             System.import("app/main");
-        </script> -->
+        </script>
     </body>
 </html>
